--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>institutotebaida</title>
+    <title>Intitucion Educativa La Tebaida</title>
     <link rel="icon" href="imagenes/zipwp-image-5610-120x120.png">
     <link rel="stylesheet" href="diseño/diseño.css">
 </head>
